--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,22 +5,23 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-dark: #1a1a1f;
+  --color-blue: #0a1045;
+  --color-cyan: #06B6D4;
+  --color-cyan-h: #22D3EE;
+  --color-light: #f7f9f7;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: var(--color-light);
+  background-color: var(--color-dark);
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+p {
+  font-family: var(--font-poppins)
 }
